force-app/main/default/objects/malive__MALiveEventAssociation__c/malive__MALiveEventAssociation__c.object-meta.xml
<CustomObject>
    <label>MA Live Event Association</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>MA Live Event Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MA Live Event Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>