force-app/main/default/objects/malive__MALiveEventAssociation__c/fields/malive__AssociatedAccount__c.field-meta.xml
<CustomField>
    <fullName>malive__AssociatedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MA Live Event Associations</relationshipLabel>
    <relationshipName>MALiveEventAssociations</relationshipName>
    <type>Lookup</type>
</CustomField>