force-app/main/default/objects/malive__MALiveEventAssociation__c/fields/malive__AssociatedContact__c.field-meta.xml
<CustomField>
    <fullName>malive__AssociatedContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MA Live Event Associations</relationshipLabel>
    <relationshipName>MALiveEventAssociations</relationshipName>
    <type>Lookup</type>
</CustomField>