force-app/main/default/objects/malive__MALiveEventAssociation__c/fields/malive__AssociatedLead__c.field-meta.xml
<CustomField>
    <fullName>malive__AssociatedLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>MA Live Event Associations</relationshipLabel>
    <relationshipName>MALiveEventAssociations</relationshipName>
    <type>Lookup</type>
</CustomField>