force-app/main/default/objects/malive__MALiveEventAssociation__c/fields/malive__AssociatedOpportunity__c.field-meta.xml
<CustomField>
    <fullName>malive__AssociatedOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>MA Live Event Associations</relationshipLabel>
    <relationshipName>MALiveEventAssociations</relationshipName>
    <type>Lookup</type>
</CustomField>