force-app/main/default/objects/malive__MALiveEventAssociation__c/fields/malive__Customer__c.field-meta.xml
<CustomField>
    <fullName>malive__Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MA Live Event Associations (Customer)</relationshipLabel>
    <relationshipName>CustomerAssociations</relationshipName>
    <type>Lookup</type>
</CustomField>