force-app/main/default/objects/malive__MALiveEventAssociation__c/fields/malive__DistanceToStopMeters__c.field-meta.xml
<CustomField>
    <fullName>malive__DistanceToStopMeters__c</fullName>
    <formula>malive__DistanceToStopKilos__c * 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance To Stop (m)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>