force-app/main/default/objects/malive__MALiveEventAssociation__c/fields/malive__DistanceUnits__c.field-meta.xml
<CustomField>
    <fullName>malive__DistanceUnits__c</fullName>
    <label>Distance Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>miles</fullName>
                <default>true</default>
                <label>miles</label>
            </value>
            <value>
                <fullName>kilometers</fullName>
            </value>
            <value>
                <fullName>feet</fullName>
            </value>
            <value>
                <fullName>meters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>