force-app/main/default/objects/malive__MALiveEventAssociation__c/fields/malive__EventDate__c.field-meta.xml
<CustomField>
    <fullName>malive__EventDate__c</fullName>
    <formula>malive__MALive_SummaryEvent__r.malive__MALiveDailySummary__r.malive__Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>