force-app/main/default/objects/malive__MALiveEventAssociation__c/fields/malive__EventStopTime__c.field-meta.xml
<CustomField>
    <fullName>malive__EventStopTime__c</fullName>
    <formula>malive__MALive_SummaryEvent__r.malive__EventEnded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Stop Time</label>
    <type>DateTime</type>
</CustomField>