force-app/main/default/objects/malive__MALiveEventAssociation__c/fields/malive__MALive_SummaryEvent__c.field-meta.xml
<CustomField>
    <fullName>malive__MALive_SummaryEvent__c</fullName>
    <label>MA Live Asset Daily Summary Event</label>
    <referenceTo>malive__MALive_SummaryEvent__c</referenceTo>
    <relationshipLabel>MA Live Event Associations</relationshipLabel>
    <relationshipName>MALiveEventAssociations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>