force-app/main/default/objects/malive__MALiveEventAssociation__c/fields/malive__MALiveSummaryStopRelationshipConfig__c.field-meta.xml
<CustomField>
    <fullName>malive__MALiveSummaryStopRelationshipConfig__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MA Live Summary Stop Relationship Config</label>
    <referenceTo>malive__MALiveSummaryStopRelationshipConfig__c</referenceTo>
    <relationshipLabel>MA Live Event Associations</relationshipLabel>
    <relationshipName>MALiveEventAssociations</relationshipName>
    <type>Lookup</type>
</CustomField>